// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> Snapshots when color is cr-blue should render correctly 1`] = `
<svg
  className="e1pla2t60 cr-icon css-h552tm-StyledIcon-StyledIcon er8b7wo0"
  fill="#2875c6"
  style={
    Object {
      "height": "1rem",
      "width": "1rem",
    }
  }
  viewBox="0 0 16 16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="cr-icon__base cr-icon__base-2"
    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm0-3A5 5 0 1 0 8 3a5 5 0 0 0 0 10z"
    opacity=".3"
  />
  <path
    className="cr-icon__base cr-icon__base-1"
    d="M8 13a1.5 1.5 0 0 1 0 3A8 8 0 0 1 .323 5.742a1.5 1.5 0 1 1 2.879.846A5 5 0 0 0 8 13z"
  />
</svg>
`;

exports[`<Spinner /> Snapshots when empty props should render correctly 1`] = `
<svg
  className="e1pla2t60 cr-icon css-h552tm-StyledIcon-StyledIcon er8b7wo0"
  style={
    Object {
      "height": "1rem",
      "width": "1rem",
    }
  }
  viewBox="0 0 16 16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="cr-icon__base cr-icon__base-2"
    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm0-3A5 5 0 1 0 8 3a5 5 0 0 0 0 10z"
    opacity=".3"
  />
  <path
    className="cr-icon__base cr-icon__base-1"
    d="M8 13a1.5 1.5 0 0 1 0 3A8 8 0 0 1 .323 5.742a1.5 1.5 0 1 1 2.879.846A5 5 0 0 0 8 13z"
  />
</svg>
`;

exports[`<Spinner /> Snapshots when size is xlarge should render correctly 1`] = `
<svg
  className="e1pla2t60 cr-icon css-h552tm-StyledIcon-StyledIcon er8b7wo0"
  style={
    Object {
      "height": "1.5rem",
      "width": "1.5rem",
    }
  }
  viewBox="0 0 16 16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="cr-icon__base cr-icon__base-2"
    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm0-3A5 5 0 1 0 8 3a5 5 0 0 0 0 10z"
    opacity=".3"
  />
  <path
    className="cr-icon__base cr-icon__base-1"
    d="M8 13a1.5 1.5 0 0 1 0 3A8 8 0 0 1 .323 5.742a1.5 1.5 0 1 1 2.879.846A5 5 0 0 0 8 13z"
  />
</svg>
`;
